tests/expectations/compiler/array/nested_array_sum_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [ETYC0372117]: Expected an array but type `u32` was found.
    --> compiler-test:9:29
     |
   9 |                 sum = sum + a[i][j];
     |                             ^^^^
"""]
